Update Python - Revenue of undervalued apps improvement.ipynb

--- a/Python - Revenue of undervalued apps improvement.ipynb
+++ b/Python - Revenue of undervalued apps improvement.ipynb
@@ -3892,7 +3892,7 @@
    "id": "1bd97415",
    "metadata": {},
    "source": [
-    "It is estimated that an additional $115 million revenue will be generated after increasing the apps price."
+    "It is estimated that an additional $115 million revenue will be generated after increasing the apps price. However, this estimation cannot be an absolute conclusion. There are other factors have to be considered in real business setting."
    ]
   }
  ],
